# tinybot

./: README.md  pyproject.toml
tinybot/: __init__.py  bot.py  executor.py  multicall.py  state.py  tg.py  types.py  utils.py
